Update ManagedBy field in nrel-pds-sup3rcc.yaml
Updated NREL to NLR

--- a/datasets/nrel-pds-sup3rcc.yaml
+++ b/datasets/nrel-pds-sup3rcc.yaml
@@ -18,7 +18,7 @@ Description: |
   quantify this uncertainty.
 Documentation: https://github.com/NREL/sup3r
 Contact: Grant Buster (grant.buster@nrel.gov)
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: Annual
 Collabs:
   ASDI:
