Update ManagedBy field in windai.yaml
Updated NREL to NLR

--- a/datasets/nrel-pds-windai.yaml
+++ b/datasets/nrel-pds-windai.yaml
@@ -11,7 +11,7 @@ Description: |
   documentation that show how to access the data for ML modeling.
 Documentation: https://github.com/NREL/windAI_bench
 Contact: Ryan King (ryan.king@nrel.gov)
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: Annually
 Collabs:
   ASDI:
