--- a/datasets/nrel-pds-wtk.yaml
+++ b/datasets/nrel-pds-wtk.yaml
@@ -7,7 +7,7 @@ Description: |
   integration studies.
 Documentation: https://www.nrel.gov/grid/wind-toolkit.html
 Contact: wind-toolkit@nrel.gov
-ManagedBy: '[National Renewable Energy Laboratory](https://www.nrel.gov/)'
+ManagedBy: '[National Laboratory of the Rockies](https://www.nrel.gov/)'
 UpdateFrequency: As Needed
 Collabs:
   ASDI:
@@ -270,3 +270,4 @@ DataAtWork:
     - Title: 'WTK-LED: The WIND Toolkit Long-Term Ensemble Dataset'
       URL: https://www.osti.gov/servlets/purl/2473210/
       AuthorName: Caroline Draxl, Jiali Wang, Lindsay Sheridan, et al.
+
