updated SNS queue arn

--- a/datasets/nuview-state.yaml
+++ b/datasets/nuview-state.yaml
@@ -24,7 +24,7 @@ Resources:
     Type: S3 Bucket
     RequesterPays: True
   - Description: New data notifications
-    ARN: arn:aws:sns:us-west-2:{TBA}:nuview-state-opendata-events
+    ARN: arn:aws:sns:us-west-2:830737158982:nuview-state-opendata-object_created
     Region: us-west-2
     Type: SNS Topic
 DataAtWork:
