ok: Update nuview-state.yaml

--- a/datasets/nuview-state.yaml
+++ b/datasets/nuview-state.yaml
@@ -9,6 +9,7 @@ Contact: support@nuview.space
 ManagedBy: "[NUVIEW](https://nuview.space/)"
 UpdateFrequency: Project-based updates.
 Tags:
+  - aws-pds
   - geospatial
   - satellite imagery
   - natural resource
