--- a/datasets/brainglobe.yaml
+++ b/datasets/brainglobe.yaml
@@ -26,18 +26,15 @@ License: Creative Commons CC0 1.0 Universal
 Citation: Claudi et al., (2020). BrainGlobe Atlas API: a common interface for neuroanatomical atlases. Journal of Open Source Software, 5(54), 2668, https://doi.org/10.21105/joss.02668
 Resources:
   - Description: Atlases and sample data in a public bucket
-    ARN:
-    Region:
-    Type:
-    Explore:
+    ARN: arn:aws:s3:::brainglobe
+    Region: us-west-2
+    Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title:
+    - Title: Interacting with cloud atlas data through Python
       URL: https://brainglobe.info/aws_examples/explore_atlas.html
-      NotebookURL:
       AuthorName: Alessandro Felder
       AuthorURL: https://github.com/alessandrofelder
-      Services:
   Publications:
     - Title: BrainGlobe Atlas API: a common interface for neuroanatomical atlases
       URL: https://doi.org/10.21105/joss.02668
