ok: Update openfold3.yaml
Adding this cool tutorial from one of our SAs: https://www.youtube.com/watch?v=7fVsDWfbr7w

--- a/datasets/openfold3.yaml
+++ b/datasets/openfold3.yaml
@@ -21,6 +21,11 @@ Resources:
     Region: us-east-2
     Type: S3 Bucket
 DataAtWork:
+  Tutorials:
+    - Title: Deploying OpenFold3 with NVIDIA NIMs on Brev & AWS EC2
+      URL: https://www.youtube.com/watch?v=7fVsDWfbr7w
+      AuthorName: Glòria Macià
+      AuthorURL: https://www.linkedin.com/in/gloriamacia/
   Publications:
     - Title: "OpenProteinSet: Training data for structural biology at scale"
       URL: "https://arxiv.org/abs/2308.05326"
