ok: Update nuview-state.yaml

--- a/datasets/nuview-state.yaml
+++ b/datasets/nuview-state.yaml
@@ -15,7 +15,7 @@ Tags:
   - natural resource
   - sustainability
   - disaster response
-  - digital elevation model
+  - dem
   - lidar
 License: CC0 "Public Domain" (or state/agency-specific open data licenses)
 Resources:
