ok: Update brainglobe.yaml

--- a/datasets/brainglobe.yaml
+++ b/datasets/brainglobe.yaml
@@ -6,6 +6,7 @@ ManagedBy: [BrainGlobe](https://brainglobe.info/)
 UpdateFrequency: When new atlases are packaged
 Tags:
   - biology
+  - life sciences
   - digital preservation
   - Homo sapiens
   - image processing
@@ -21,7 +22,7 @@ Tags:
   - Rattus norvegicus
   - volumetric imaging
   - zarr
-  
+  - aws-pds
 License: Creative Commons CC0 1.0 Universal
 Citation: Claudi et al., (2020). BrainGlobe Atlas API: a common interface for neuroanatomical atlases. Journal of Open Source Software, 5(54), 2668, https://doi.org/10.21105/joss.02668
 Resources:
