--- a/datasets/brainglobe.yaml
+++ b/datasets/brainglobe.yaml
@@ -2,7 +2,7 @@ Name: BrainGlobe Atlases
 Description: BrainGlobe provides an archive and standardised interface to anatomical atlases from multiple species. This dataset includes these atlases, and other data (e.g. sample neuroanatomy data) to allow the greatest use of the atlases.
 Documentation: https://brainglobe.info/documentation/brainglobe-atlasapi/usage/atlas-details.html
 Contact: hello@brainglobe.info
-ManagedBy: [BrainGlobe](https://brainglobe.info/)
+ManagedBy: "[BrainGlobe](https://brainglobe.info/)"
 UpdateFrequency: When new atlases are packaged
 Tags:
   - biology
@@ -24,7 +24,7 @@ Tags:
   - zarr
   - aws-pds
 License: Creative Commons CC0 1.0 Universal
-Citation: Claudi et al., (2020). BrainGlobe Atlas API: a common interface for neuroanatomical atlases. Journal of Open Source Software, 5(54), 2668, https://doi.org/10.21105/joss.02668
+Citation: "Claudi et al., (2020). BrainGlobe Atlas API: a common interface for neuroanatomical atlases. Journal of Open Source Software, 5(54), 2668, https://doi.org/10.21105/joss.02668"
 Resources:
   - Description: Atlases and sample data in a public bucket
     ARN: arn:aws:s3:::brainglobe
@@ -37,7 +37,7 @@ DataAtWork:
       AuthorName: Alessandro Felder
       AuthorURL: https://github.com/alessandrofelder
   Publications:
-    - Title: BrainGlobe Atlas API: a common interface for neuroanatomical atlases
+    - Title: "BrainGlobe Atlas API: a common interface for neuroanatomical atlases"
       URL: https://doi.org/10.21105/joss.02668
       AuthorName: Federico Claudi, Luigi Petrucco, Adam L. Tyson et al.
       AuthorURL: https://brainglobe.info/
