--- a/datasets/brainglobe.yaml
+++ b/datasets/brainglobe.yaml
@@ -30,6 +30,10 @@ Resources:
     ARN: arn:aws:s3:::brainglobe
     Region: us-west-2
     Type: S3 Bucket
+  - Description: Notifications for new BrainGlobe data
+    ARN: arn:aws:sns:us-west-2:865567910455:brainglobe-object_created
+    Region: us-west-2
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: Interacting with cloud atlas data through Python
