--- a/datasets/ccrsmodisalbedo.yaml
+++ b/datasets/ccrsmodisalbedo.yaml
@@ -11,9 +11,8 @@ UpdateFrequency: |
 Tags:
   - aws-pds 
   - analysis ready data
-  - broadband
-  - Canada
-  - COG
+  - broadband  
+  - cog
   - earth observation
   - satellite imagery
 License: Creative Commons Licence. Creative Commons BY 4.0 https://creativecommons.org/licenses/by/4.0/
@@ -102,6 +101,7 @@ DataAtWork:
     - Title: Probability of the annual minimum snow and ice (MSI) presence over Canada
       URL: https://open.canada.ca/data/en/dataset/808b84a1-6356-4103-a8e9-db46d5c20fcf 
       AuthorName: Trishchenko, Alexander P.                                              
+
 
 
 
