style: Remove YAML block scalar indicator from dataset descriptions.

--- a/datasets/aodn_satellite_austemp_degree-heating-day_australia.yaml
+++ b/datasets/aodn_satellite_austemp_degree-heating-day_australia.yaml
@@ -1,6 +1,5 @@
 Name: Satellite - Nighttime AusTemp - Degree Heating Days DHD grids for the Australian Maritime Region
-Description: >-
-  This dataset contains the summer Degree Heating Days (DHD) from the 1st of December
+Description: This dataset contains the summer Degree Heating Days (DHD) from the 1st of December
   to the 30th of April since 2012, which is calculated by accumulating the daily
   positive Sea Surface Temperature anomalies (SSTa). The SSTa is calculated by
   comparing the current SST to long-term averages (1993-2003, the "CSIRO Legacy
