--- a/datasets/aodn_satellite_austemp_sst-anomaly_australia.yaml
+++ b/datasets/aodn_satellite_austemp_sst-anomaly_australia.yaml
@@ -1,6 +1,5 @@
 Name: Satellite - Nighttime AusTemp - Sea Surface Water Temperature anomalies SSTa grids for the Australian Maritime Region
-Description: >- 
-  This dataset contains the summer Sea Surface Water Temperature anomalies (SSTa) from 
+Description: This dataset contains the summer Sea Surface Water Temperature anomalies (SSTa) from 
   the 1st of December to the 30th of April since 2012 by comparing the current SST to
   long-term averages (1993-2003, the “CSIRO Legacy climatology” or 2002-2011, the 
   “IMOS climatology”). The magnitude and duration of anomalously warm sea temperatures 
