--- a/datasets/ccrsmodisalbedo.yaml
+++ b/datasets/ccrsmodisalbedo.yaml
@@ -30,10 +30,9 @@ DataAtWork:
   Tutorials:
     - Title: Get To Know A Dataset - CCRS MODIS Albedo at 250-m resolution and 10-day intervals
       URL: https://github.com/OpsCCRS/AWS-Open-Data-Registry-Preparation/blob/main/CCRSMODISAlbedo/get-to-know-a-dataset-CCRSMODISAlbedo.ipynb
-      Services: 
       AuthorName: Alexander Trichtchenko
       AuthorURL: https://profils-profiles.science.gc.ca/en/profile/alexander-p-trishchenko
-      NotebookURL (Optional): https://github.com/OpsCCRS/AWS-Open-Data-Registry-Preparation/blob/main/CCRSMODISAlbedo/get-to-know-a-dataset-CCRSMODISAlbedo.ipynb   
+      NotebookURL: https://github.com/OpsCCRS/AWS-Open-Data-Registry-Preparation/blob/main/CCRSMODISAlbedo/get-to-know-a-dataset-CCRSMODISAlbedo.ipynb   
   Publications:
     - Title: "Boreal lichen woodlands: a possible negative feedback to climate change in eastern North America"
       URL: https://doi.org/10.1016/j.agrformet.2010.12.013
@@ -101,6 +100,7 @@ DataAtWork:
     - Title: Probability of the annual minimum snow and ice (MSI) presence over Canada
       URL: https://open.canada.ca/data/en/dataset/808b84a1-6356-4103-a8e9-db46d5c20fcf 
       AuthorName: Trishchenko, Alexander P.                                              
+
 
 
 
