--- a/datasets/ccrsmodisalbedo.yaml
+++ b/datasets/ccrsmodisalbedo.yaml
@@ -1,4 +1,4 @@
-Name: CCRS MODIS albedo over Canada at 250-m resolution and 10-day intervals on AWS | Albédo CCRS MODIS au-dessus du Canada à une résolution de 250 m et à intervalles de 10 jours sur AWS
+Name: CCRS MODIS albedo over Canada | Albédo CCRS MODIS au-dessus du Canada
 Description: |
             Times series of 10-day spectral and broadband albedo products derived at 250-m spatial resolution over Canadian territory and neighboring areas produced at the Canada Centre for Remote Sensing (CCRS) since February 2000 using MODIS L1B C6.1 swath imagery as input. The imagery for all spectral bands was downscaled and re-projected into the Lambert Conformal Conic (LCC) projection at 250-m spatial resolution.  The area size is 5,700 km x 4,800 km (22,800 pixel x 19,200 lines).
             Séries temporelles de produits d’albédo spectral et à large bande générés à des intervalles de 10 jours avec une résolution spatiale de 250 m, couvrant le territoire canadien et les régions voisines. Ces produits sont élaborés par le Centre canadien de télédétection (CCT) depuis février 2000 à partir des images MODIS L1B C6.1. Les images de toutes les bandes spectrales ont été rééchantillonnées et reprojetées en projection conforme de Lambert (LCC) à une résolution spatiale de 250 m. La zone couverte est d’environ 5 700 km par 4 800 km (22 800 pixels par 19 200 lignes).
@@ -100,6 +100,7 @@ DataAtWork:
     - Title: Probability of the annual minimum snow and ice (MSI) presence over Canada
       URL: https://open.canada.ca/data/en/dataset/808b84a1-6356-4103-a8e9-db46d5c20fcf 
       AuthorName: Trishchenko, Alexander P.                                              
+
 
 
 
