Add SNS topic resource

--- a/datasets/openhgl.yaml
+++ b/datasets/openhgl.yaml
@@ -23,6 +23,10 @@ Resources:
     ARN: arn:aws:s3:::openhgl
     Region: us-east-1
     Type: S3 Bucket
+  - Description: Notifications for OpenHGL updates
+    ARN: arn:aws:sns:us-east-1:104240442756:openhgl-object_created
+    Region: us-east-1
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: Using OpenHGL data
