ok: Update openhgl.yaml

--- a/datasets/openhgl.yaml
+++ b/datasets/openhgl.yaml
@@ -8,7 +8,7 @@ Description: >
 Documentation: https://lh3.github.io/OpenHGL/
 Contact: https://github.com/lh3/OpenHGL/issues
 ManagedBy: Heng Li lab at Dana-Farber Cancer Institute and Harvard Medical School
-UpdateFrequency: As new data or new analysis becomes available
+UpdateFrequency: As new data or new analyses become available
 Tags:
   - aws-pds
   - bioinformatics
