ok: Update salk-aging-mouse-brain-epigeneti.yaml

--- a/datasets/salk-aging-mouse-brain-epigeneti.yaml
+++ b/datasets/salk-aging-mouse-brain-epigeneti.yaml
@@ -1,4 +1,4 @@
-Name: Aging Mouse Brain Epigeneti
+Name: Aging Mouse Brain Epigenetic
 Description: "Aging is a major risk factor for neurodegenerative diseases, yet underlying epigenetic mechanisms remain unclear. Here, we generated a comprehensive single-nucleus cell atlas of brain aging across multiple brain regions, comprising 132,551 single-cell methylomes and 72,666 joint chromatin conformation-methylome nuclei. Integration with companion transcriptomic and chromatin accessibility data yielded a cross-modality taxonomy of 36 major cell types."
 Contact: ecker@salk.edu
 Documentation: https://doi.org/10.1101/2025.04.21.648266
@@ -14,7 +14,7 @@ Tags:
   - fastq
   - bam
   - cram
-  - STRIDES
+  - aws-pds
 License: "[NCBI Policy](https://www.ncbi.nlm.nih.gov/home/about/policies/) and [NIH Genomic Data Sharing Policy ](https://osp.od.nih.gov/scientific-sharing/genomic-data-sharing/)"
 
 Resources:
