ok: Update salk-aging-mouse-brain-epigeneti.yaml

--- a/datasets/salk-aging-mouse-brain-epigeneti.yaml
+++ b/datasets/salk-aging-mouse-brain-epigeneti.yaml
@@ -23,6 +23,7 @@ Resources:
     Type: S3 Bucket
   - Description: Dataset update notifications
     ARN: arn:aws:sns:us-west-2:855738613743:salk-aging-mouse-brain-epigenetics-updates
+    Region: us-west-2
     Type: SNS Topic
 DataAtWork:
   Publications:
