--- a/datasets/frag-struc.yaml
+++ b/datasets/frag-struc.yaml
@@ -36,3 +36,5 @@ DataAtWork:
     - Title: Hidden structural information in RNA sequencing data.
       URL:  In Preparation
       AuthorName: Yuk Kei Wan and Leonard Schärfen
+ADXCategories:
+  - Healthcare & Life Sciences Data
