Revert "move frag-struc.yaml to the datasets directory"

--- a/frag-struc.yaml
+++ b/frag-struc.yaml
@@ -5,10 +5,14 @@ Contact: "[fragSTRUC team](https://github.com/yuukiiwa/RNA_structure_by_fragment
 ManagedBy: "The Genome Institute of Singapore (https://www.a-star.edu.sg/gis) and UMass Chan Medical School's RNA Therapeutics Institute (https://www.umassmed.edu/rti/)"
 UpdateFrequency: Datasets will be updated periodically as additional data is generated.
 Tags:
+  - RNA structure
   - genomic
   - transcriptomics
   - life sciences
+  - Illumina sequencing
+  - bulk RNA sequencing
   - bioinformatics
+  - bigwig
   - aws-pds
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"
 Citation: "In addition, please cite Yuk Kei Wan and Leonard Schärfen Hidden structural information in RNA sequencing data."
@@ -28,5 +32,7 @@ DataAtWork:
     - Title: "fragSTRUC: RNA structure by fragmentation frequency"
       URL: https://github.com/lschaerfen/fragstruc
       AuthorName: Yuk Kei Wan and Leonard Schärfen
-ADXCategories:
-  - Healthcare & Life Sciences Data
+  Publications:
+    - Title: Hidden structural information in RNA sequencing data.
+      URL:  In Preparation
+      AuthorName: Yuk Kei Wan and Leonard Schärfen
