Add crescent_dunes dataset and update links

--- a/datasets/oedi-data-lake.yaml
+++ b/datasets/oedi-data-lake.yaml
@@ -125,19 +125,25 @@ Resources:
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=sup3ruhi%2F&limit=50)' 
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=sup3ruhi%2F)' 
   - Description: "[Buildings Sector Scenarios (BSS)](https://data.openei.org/submissions/8558)"
     ARN: arn:aws:s3:::oedi-data-lake/building-sector-scenarios/
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=buildings-sector-scenarios%2F&limit=50)' 
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=buildings-sector-scenarios%2F)' 
   - Description: "[U.S. Agrivoltaic Irradiance Database](https://data.openei.org/submissions/8568)"
     ARN: arn:aws:s3:::oedi-data-lake/inspire/agrivoltaics_irradiance/
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=inspire%2Fagrivoltaics_irradiance%2F&limit=50)' 
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=inspire%2Fagrivoltaics_irradiance%2F)' 
+  - Description: "[Wind and Structural Loads on Heliostats](https://data.openei.org/submissions/8601)"
+    ARN: arn:aws:s3:::oedi-data-lake/crescent_dunes/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=oedi-data-lake&prefix=crescent_dunes%2F)' 
 DataAtWork:
   Tools & Applications:
     - Title: "Tracking the Sun Tool"
